--- a/KosaESS/src/main/resources/static/css/admin/lecture_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/lecture_list.css
@@ -83,7 +83,7 @@
 	display: flex;
 }
 
-.insert div span {
+.insert div >span {
 	color: #0E5881;
 	font-weight: bold;
 }
@@ -122,7 +122,7 @@
 	width:20px;
 }
 
-.insert_professor div span {
+.insert_professor div >span {
 	color: #0E5881;
 	font-weight: bold;
 }
@@ -160,4 +160,25 @@
 	height: 85%;
 	border: 1px solid #CFDEE6;
 	overflow-y: scroll;
+}
+
+.red{
+	color:red;
+	vertical-align: middle;
+}
+
+.td_lecture_check_box, .td_lecture_num, .td_lecture_professor{
+	text-align:center;
+}
+
+.td_lecture_tm{
+	text-align: right;
+}
+
+.td_professor_check_box, .td_professor_num, .td_professor_name, .td_professor_tel {
+	text-align: center;
+}
+
+.td_subject_check_box, .td_subject_num{
+	text-align: center;
 }
